@@ -1,5 +1,6 @@
 package com.ll.products.domain.recommendation.service;
 
+import com.ll.products.domain.recommendation.exception.EmbeddingException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.embedding.EmbeddingModel;
@@ -21,12 +22,14 @@ public class EmbeddingService {
         try {
             log.debug("임베딩 생성 중");
             EmbeddingResponse response = embeddingModel.embedForResponse(List.of(validatedText));
-            float[] embedding = validateEmbedding(response);
+            float[] embedding = getEmbeddingFromResponse(response);
             log.debug("임베딩 생성 완료");
             return embedding;
+        } catch (EmbeddingException e) {
+            throw e;
         } catch (Exception e) {
             log.error("임베딩 생성 실패", e);
-            throw new RuntimeException("임베딩 생성 중 오류 발생: " + e.getMessage(), e);
+            throw new EmbeddingException("임베딩 생성 중 오류가 발생했습니다.");
         }
     }
 
@@ -41,11 +44,14 @@ public class EmbeddingService {
                 .toList();
         try {
             EmbeddingResponse response = embeddingModel.embedForResponse(validatedTexts);
-            List<float[]> embeddings = validateEmbeddings(response, validatedTexts.size());
+            List<float[]> embeddings = getEmbeddingsFromResponse(response, validatedTexts.size());
             log.info("배치 임베딩 생성 완료: count={}", embeddings.size());
             return embeddings;
+        } catch (EmbeddingException e) {
+            throw e;
         } catch (Exception e) {
-            throw new RuntimeException("배치 임베딩 생성 중 오류 발생: " + e.getMessage(), e);
+            log.error("배치 임베딩 생성 실패", e);
+            throw new EmbeddingException("배치 임베딩 생성 중 오류가 발생했습니다.");
         }
     }
 
@@ -58,31 +64,31 @@ public class EmbeddingService {
         return text;
     }
 
-    // 임베딩 검증(단일)
-    private float[] validateEmbedding(EmbeddingResponse response) {
+    // 임베딩 검증 및 반환(단일)
+    private float[] getEmbeddingFromResponse(EmbeddingResponse response) {
         if (response == null || response.getResults() == null || response.getResults().isEmpty()) {
-            throw new RuntimeException("임베딩 응답이 비어있습니다");
+            throw new EmbeddingException("임베딩 응답이 비어있습니다.");
         }
 
-        float[] embedding = response.getResults().get(0).getOutput();
+        float[] embedding = response.getResults().getFirst().getOutput();
         if (embedding == null || embedding.length == 0) {
-            throw new RuntimeException("임베딩 벡터가 비어있습니다");
+            throw new EmbeddingException("임베딩 벡터가 비어있습니다.");
         }
         return embedding;
     }
 
 
-    // 임베딩 검증(다중)
-    private List<float[]> validateEmbeddings(EmbeddingResponse response, int expectedCount) {
+    // 임베딩 검증 및 반환(다중)
+    private List<float[]> getEmbeddingsFromResponse(EmbeddingResponse response, int expectedCount) {
         if (response == null || response.getResults() == null || response.getResults().isEmpty()) {
-            throw new RuntimeException("임베딩 응답이 비어있습니다");
+            throw new EmbeddingException("임베딩 응답이 비어있습니다.");
         }
         List<float[]> embeddings = response.getResults().stream()
                 .map(result -> result.getOutput())
                 .toList();
 
         if (embeddings.size() != expectedCount) {
-            throw new RuntimeException("임베딩 개수가 일치하지 않습니다");
+            throw new EmbeddingException("임베딩 개수가 일치하지 않습니다.");
         }
         return embeddings;
     }
